[lworld] InterpreterRuntime::uninitialized_static_value_field fails with fatal error: An exception should have been thrown above

XMLWordPrintable

      # Internal Error (open/src/hotspot/share/interpreter/interpreterRuntime.cpp:400), pid=14450, tid=14451
      # fatal error: An exception should have been thrown above
      #
      # JRE version: Java(TM) SE Runtime Environment (14.0+5) (fastdebug build 14-valhalla+5-70)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-valhalla+5-70, mixed mode, compressed oops, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0xe51a25] InterpreterRuntime::uninitialized_static_value_field(JavaThread*, oopDesc*, int)+0x4e5

      Stack: [0x00007f8e143a2000,0x00007f8e144a3000], sp=0x00007f8e144a0a20, free space=1018k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0xe51a25] InterpreterRuntime::uninitialized_static_value_field(JavaThread*, oopDesc*, int)+0x4e5
      j Cls.<init>()QCls;+99
      j Cls1.<clinit>()V+6
      v ~StubRoutines::call_stub
      V [libjvm.so+0xe607b9] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x859
      V [libjvm.so+0xe20dff] InstanceKlass::call_class_initializer(Thread*)+0x1bf
      V [libjvm.so+0xe21e73] InstanceKlass::initialize_impl(Thread*)+0xf93
      V [libjvm.so+0xe2246b] InstanceKlass::initialize(Thread*)+0x8b
      V [libjvm.so+0xe21531] InstanceKlass::initialize_impl(Thread*)+0x651
      V [libjvm.so+0xe2246b] InstanceKlass::initialize(Thread*)+0x8b
      V [libjvm.so+0x11f1bf0] LinkResolver::resolve_field(fieldDescriptor&, LinkInfo const&, Bytecodes::Code, bool, Thread*)+0x550
      V [libjvm.so+0x11f22fe] LinkResolver::resolve_field_access(fieldDescriptor&, constantPoolHandle const&, int, methodHandle const&, Bytecodes::Code, Thread*)+0x6e
      V [libjvm.so+0xe507c7] InterpreterRuntime::resolve_get_put(JavaThread*, Bytecodes::Code)+0x197
      V [libjvm.so+0xe51473] InterpreterRuntime::resolve_from_cache(JavaThread*, Bytecodes::Code)+0xf3
      j Test.mainTest([Ljava/lang/String;)V+29
      j Test.main([Ljava/lang/String;)V+14
      v ~StubRoutines::call_stub
      V [libjvm.so+0xe607b9] JavaCalls::call_helper(JavaValue*, methodHandle const&, JavaCallArguments*, Thread*)+0x859
      V [libjvm.so+0xf5d5aa] jni_invoke_static(JNIEnv_*, JavaValue*, _jobject*, JNICallType, _jmethodID*, JNI_ArgumentPusher*, Thread*) [clone .isra.164] [clone .constprop.249]+0x12a
      V [libjvm.so+0xf61788] jni_CallStaticVoidMethod+0x1e8
      C [libjli.so+0x4c3d] JavaMain+0xbcd
      C [libjli.so+0x8159] ThreadJavaMain+0x9

        1. FuzzerUtils.java
          13 kB
        2. hs_err_pid14450.log
          102 kB
        3. Test.java
          14 kB

            Assignee:
            Frederic Parain
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: