8230912: [lworld] InterpreterRuntime::uninitialized_static_value_field fails with fatal error: An exception should have been thrown above

Reviewed-by: dsimms